All Links are Set

--- a/blogs.html
+++ b/blogs.html
@@ -110,7 +110,9 @@
             onclick="location.href = 'blogs/advantages-of-investment-in-real-estate.html'"
           >
             <div class="img-wrapper">
-              <img src="images/blog-1.jpg" />
+              <img
+                src="images/blog/advantages-of-investment-in-real-estate.jpg"
+              />
             </div>
             <div class="card-content">
               <a href="blogs/advantages-of-investment-in-real-estate.html">
@@ -135,7 +137,7 @@
             onclick="location.href = 'blogs/early-bird-balloting.html'"
           >
             <div class="img-wrapper">
-              <img src="images/blog-2.jpg" />
+              <img src="images/blog/early-bird-balloting.jpg" />
             </div>
             <div class="card-content">
               <a href="blogs/early-bird-balloting.html">
@@ -158,7 +160,7 @@
             onclick="location.href = 'blogs/a-golden-investment-opportunity.html'"
           >
             <div class="img-wrapper">
-              <img src="images/blog-3.jpg" />
+              <img src="images/blog/golden-investment-opportunity.jpg" />
             </div>
             <div class="card-content">
               <a href="blogs/a-golden-investment-opportunity.html">
@@ -183,7 +185,7 @@
             onclick="location.href = 'blogs/designing-your-house.html'"
           >
             <div class="img-wrapper">
-              <img src="images/blog-1.jpg" />
+              <img src="images/blog/early-bird-balloting.jpg" />
             </div>
             <div class="card-content">
               <a href="designing-your-house.html">
@@ -208,7 +210,7 @@
             onclick="location.href = 'blogs/early-bird-balloting.html'"
           >
             <div class="img-wrapper">
-              <img src="images/blog-2.jpg" />
+              <img src="images/blog/early-bird-balloting.jpg" />
             </div>
             <div class="card-content">
               <a href="blogs/early-bird-balloting.html">
@@ -231,7 +233,7 @@
             onclick="location.href = 'blogs/a-golden-investment-opportunity.html'"
           >
             <div class="img-wrapper">
-              <img src="images/blog-3.jpg" />
+              <img src="images/blog/golden-investment-opportunity.jpg" />
             </div>
             <div class="card-content">
               <a href="blogs/a-golden-investment-opportunity.html">
@@ -256,7 +258,9 @@
             onclick="location.href = 'blogs/advantages-of-investment-in-real-estate.html'"
           >
             <div class="img-wrapper">
-              <img src="images/blog-1.jpg" />
+              <img
+                src="images/blog/advantages-of-investment-in-real-estate.jpg"
+              />
             </div>
             <div class="card-content">
               <a href="blogs/advantages-of-investment-in-real-estate.html">
@@ -281,7 +285,7 @@
             onclick="location.href = 'blogs/early-bird-balloting.html'"
           >
             <div class="img-wrapper">
-              <img src="images/blog-2.jpg" />
+              <img src="images/blog/early-bird-balloting.jpg" />
             </div>
             <div class="card-content">
               <a href="blogs/early-bird-balloting.html">
@@ -304,7 +308,7 @@
             onclick="location.href = 'blogs/a-golden-investment-opportunity.html'"
           >
             <div class="img-wrapper">
-              <img src="images/blog-3.jpg" />
+              <img src="images/blog/golden-investment-opportunity.jpg" />
             </div>
             <div class="card-content">
               <a href="blogs/a-golden-investment-opportunity.html">
