--- a/business-insights.html
+++ b/business-insights.html
@@ -203,7 +203,9 @@
         <div class="card-wrapper">
           <div class="card" data-aos="zoom-in">
             <div class="img-wrapper">
-              <img src="images/blog-1.jpg" />
+              <img
+                src="images/blog/advantages-of-investment-in-real-estate.jpg"
+              />
             </div>
             <div class="card-content">
               <a href="blogs/advantages-of-investment-in-real-estate.html">
@@ -223,7 +225,7 @@
           </div>
           <div class="card" data-aos="zoom-in">
             <div class="img-wrapper">
-              <img src="images/blog-2.jpg" />
+              <img src="images/blog/early-bird-balloting.jpg" />
             </div>
             <div class="card-content">
               <a href="blogs/early-bird-balloting.html">
@@ -238,7 +240,7 @@
           </div>
           <div class="card" data-aos="zoom-in">
             <div class="img-wrapper">
-              <img src="images/blog-3.jpg" />
+              <img src="images/blog/golden-investment-opportunity.jpg" />
             </div>
             <div class="card-content">
               <a href="blogs/a-golden-investment-opportunity.html">
@@ -258,7 +260,9 @@
           </div>
           <div class="card" data-aos="zoom-in">
             <div class="img-wrapper">
-              <img src="images/blog-1.jpg" />
+              <img
+                src="images/blog/advantages-of-investment-in-real-estate.jpg"
+              />
             </div>
             <div class="card-content">
               <a href="blogs/advantages-of-investment-in-real-estate.html">
@@ -278,7 +282,7 @@
           </div>
           <div class="card" data-aos="zoom-in">
             <div class="img-wrapper">
-              <img src="images/blog-1.jpg" />
+              <img src="images/blog/early-bird-balloting.jpg" />
             </div>
             <div class="card-content">
               <a href="blogs/advantages-of-investment-in-real-estate.html">
@@ -298,7 +302,7 @@
           </div>
           <div class="card" data-aos="zoom-in">
             <div class="img-wrapper">
-              <img src="images/blog-2.jpg" />
+              <img src="images/blog/golden-investment-opportunity.jpg" />
             </div>
             <div class="card-content">
               <a href="blogs/early-bird-balloting.html">
@@ -317,7 +321,7 @@
             onclick="location.href = 'blogs/designing-your-house.html'"
           >
             <div class="img-wrapper">
-              <img src="images/blog-3.jpg" />
+              <img src="images/blog/golden-investment-opportunity.jpg" />
             </div>
             <div class="card-content">
               <a href="blogs/designing-your-house.html">
@@ -335,7 +339,9 @@
           </div>
           <div class="card" data-aos="zoom-in">
             <div class="img-wrapper">
-              <img src="images/blog-1.jpg" />
+              <img
+                src="images/blog/advantages-of-investment-in-real-estate.jpg"
+              />
             </div>
             <div class="card-content">
               <a href="blogs/advantages-of-investment-in-real-estate.html">
