--- a/projects/rudn-enclave-islamabad.html
+++ b/projects/rudn-enclave-islamabad.html
@@ -96,7 +96,7 @@
           <li data-aos="zoom-out">
             <a href="../videos.html">Videos</a>
           </li>
-          <li data-aos="zoom-out"><a href="">Careers</a></li>
+          <li data-aos="zoom-out"><a href="../career.html">Careers</a></li>
           <li data-aos="zoom-out">
             <a href="../contact.html">Contact</a>
           </li>
@@ -197,7 +197,7 @@
               <a href="../business-insights.html">Business Insights</a>
             </li>
             <li><a href="../videos.html">Videos</a></li>
-            <li><a href="">Careers</a></li>
+            <li><a href="../career.html">Careers</a></li>
             <li><a href="../contact.html">Contact</a></li>
           </ul>
         </div>
