--- a/blogs/early-bird-balloting.html
+++ b/blogs/early-bird-balloting.html
@@ -98,18 +98,13 @@
           <li data-aos="zoom-out">
             <a href="../videos.html">Videos</a>
           </li>
-          <li data-aos="zoom-out"><a href="">Careers</a></li>
+          <li data-aos="zoom-out"><a href="../career.html">Careers</a></li>
           <li data-aos="zoom-out">
             <a href="../contact.html">Contact</a>
           </li>
         </ul>
       </nav>
-      <div class="search">
-        <h1>Regal Marketing</h1>
-        <p>
-          Here you go We are deals in all Society you can find all societies
-        </p>
-      </div>
+      <div class="search"></div>
     </header>
 
     <div class="single-project">
@@ -330,63 +325,55 @@
     <footer>
       <div class="row">
         <div class="col">
-          <img
-            src="../images/footer-logo.png"
-            class="footer-logo"
-            data-aos="fade-up"
-          />
-          <p data-aos="fade-up">
+          <img src="../images/footer-logo.png" class="footer-logo" />
+          <p>
             Group of expert investment advisors, consultants and sales
             executives insuring profit and leagal compliance.
           </p>
         </div>
         <div class="col">
-          <h3 data-aos="fade-up">
+          <h3>
             Office
-            <div class="underline" data-aos="fade-up"><span></span></div>
+            <div class="underline"><span></span></div>
           </h3>
-          <p data-aos="fade-up">1st Floor, Zamzam Arcade, Plaza 1-A</p>
-          <p data-aos="fade-up">Street # 39, Alia Market, G-13/2, Islamabad</p>
-          <p class="email-id" data-aos="fade-up">info@regalmarketing.com.pk</p>
-          <h4 data-aos="fade-up">+92 - 334 9000007</h4>
+          <p>1st Floor, Zamzam Arcade, Plaza 1-A</p>
+          <p>Street # 39, Alia Market, G-13/2, Islamabad</p>
+          <p class="email-id">info@regalmarketing.com.pk</p>
+          <h4>+92 - 334 9000007</h4>
         </div>
         <div class="col">
-          <h3 data-aos="fade-up">
+          <h3>
             Links
-            <div class="underline" data-aos="fade-up"><span></span></div>
+            <div class="underline"><span></span></div>
           </h3>
           <ul>
-            <li data-aos="fade-up"><a href="../home.html">Home</a></li>
-            <li data-aos="fade-up"><a href="../about.html">About</a></li>
-            <li data-aos="fade-up"><a href="../projects.html">Projects</a></li>
-            <li data-aos="fade-up">
+            <li><a href="../home.html">Home</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../projects.html">Projects</a></li>
+            <li>
               <a href="../product&services.html">Products & Services</a>
             </li>
-            <li data-aos="fade-up">
+            <li>
               <a href="../business-insights.html">Business Insights</a>
             </li>
-            <li data-aos="fade-up"><a href="../videos.html">Videos</a></li>
-            <li data-aos="fade-up"><a href="">Careers</a></li>
-            <li data-aos="fade-up"><a href="../contact.html">Contact</a></li>
+            <li><a href="../videos.html">Videos</a></li>
+            <li><a href="../career.html">Careers</a></li>
+            <li><a href="../contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="col">
-          <h3 data-aos="fade-up">
+          <h3>
             Newsletter
-            <div class="underline" data-aos="fade-up"><span></span></div>
+            <div class="underline"><span></span></div>
           </h3>
-          <form class="footer-form" data-aos="zoom-in">
-            <i class="far fa-envelope" data-aos="fade-right"></i>
-            <input
-              type="email"
-              placeholder="Enter you email"
-              data-aos="fade-up"
-            />
+          <form class="footer-form">
+            <i class="far fa-envelope"></i>
+            <input type="email" placeholder="Enter you email" />
             <button type="submit">
-              <i class="fas fa-arrow-right" data-aos="fade-left"></i>
+              <i class="fas fa-arrow-right"></i>
             </button>
           </form>
-          <div class="social-icons" data-aos="fade-up">
+          <div class="social-icons">
             <i class="fab fa-facebook-f"></i>
             <i class="fab fa-twitter"></i>
             <i class="fab fa-whatsapp"></i>
@@ -394,8 +381,8 @@
           </div>
         </div>
       </div>
-      <hr data-aos="zoom-in" data-aos-offset="40" />
-      <p class="copyright" data-aos="zoom-in" data-aos-offset="50">
+      <hr />
+      <p class="copyright">
         Copyright © 2022 Regal Marketing Pvt. Ltd | Powered by Regal Marketing
         Pvt. Ltd
       </p>
