--- a/home.html
+++ b/home.html
@@ -332,7 +332,9 @@
             onclick="location.href = 'blogs/advantages-of-investment-in-real-estate.html'"
           >
             <div class="img-wrapper">
-              <img src="images/blog-1.jpg" />
+              <img
+                src="images/blog/advantages-of-investment-in-real-estate.jpg"
+              />
             </div>
             <div class="card-content">
               <a href="blogs/advantages-of-investment-in-real-estate.html">
@@ -358,7 +360,7 @@
             onclick="location.href = 'blogs/early-bird-balloting.html'"
           >
             <div class="img-wrapper">
-              <img src="images/blog-2.jpg" />
+              <img src="images/blog/early-bird-balloting.jpg" />
             </div>
             <div class="card-content">
               <a href="blogs/early-bird-balloting.html">
@@ -382,7 +384,7 @@
             onclick="location.href = 'blogs/a-golden-investment-opportunity.html'"
           >
             <div class="img-wrapper">
-              <img src="images/blog-3.jpg" />
+              <img src="images/blog/golden-investment-opportunity.jpg" />
             </div>
             <div class="card-content">
               <a href="blogs/a-golden-investment-opportunity.html">
