All Links are Set

--- a/home.html
+++ b/home.html
@@ -242,9 +242,9 @@
         </p>
         <div class="card-wrapper">
           <div class="card" data-aos="zoom-in">
-            <div class="service-img">
+            <!-- <div class="service-img">
               <i class="fab fa-whatsapp"></i>
-            </div>
+            </div> -->
             <!-- <img src="images/asset-management.png" alt="" data-aos="ease-out" /> -->
             <h2>Asset Management</h2>
             <p>
@@ -254,9 +254,9 @@
             </p>
           </div>
           <div class="card" data-aos="zoom-in">
-            <div class="service-img">
+            <!-- <div class="service-img">
               <i class="fab fa-whatsapp"></i>
-            </div>
+            </div> -->
             <!-- <img
               src="images/merge-your-property.png"
               alt=""
@@ -270,9 +270,9 @@
             </p>
           </div>
           <div class="card" data-aos="zoom-in">
-            <div class="service-img">
+            <!-- <div class="service-img">
               <i class="fab fa-whatsapp"></i>
-            </div>
+            </div> -->
             <!-- <img src="images/expert-opinions.png" alt="" data-aos="ease-out" /> -->
             <h2>Monitoring Services</h2>
             <p>
@@ -329,6 +329,30 @@
           <div
             class="card"
             data-aos="zoom-in"
+            onclick="location.href = 'blogs/designing-your-house.html'"
+          >
+            <div class="img-wrapper">
+              <img src="images/blog/golden-investment-opportunity.jpg" />
+            </div>
+            <div class="card-content">
+              <a href="blogs/designing-your-house.html">
+                <h1>Designing your House</h1>
+              </a>
+              <span>September 15, 2022</span>
+              <p>
+                Planning and designing your personal home is an incredible
+                prospect. You get to craft a galaxy that is yours, is owned by
+                you and that’s flawlessly well-matched to your likings and
+                lifestyle ...
+              </p>
+              <a href="blogs/designing-your-house.html" class="read-more"
+                >Read More</a
+              >
+            </div>
+          </div>
+          <div
+            class="card"
+            data-aos="zoom-in"
             onclick="location.href = 'blogs/advantages-of-investment-in-real-estate.html'"
           >
             <div class="img-wrapper">
@@ -345,7 +369,7 @@
                 Real estate investments have the muscle to unlock endless
                 opportunities for those who compel to the business or to save
                 for the better future. The passive income that each investment
-                produces with the passage of time
+                produces with the passage of ...
               </p>
               <a
                 href="blogs/advantages-of-investment-in-real-estate.html"
@@ -371,35 +395,9 @@
                 New metro city Gujar Khan Files bookings are now open at Regal
                 Marketing and a good number of files are available at our
                 office. New Metro City Gujar Khan Early Bird Balloting has been
-                announced by BSM developers.
+                announced by BSM developers ...
               </p>
               <a href="blogs/early-bird-balloting.html" class="read-more"
-                >Read More</a
-              >
-            </div>
-          </div>
-          <div
-            class="card"
-            data-aos="zoom-in"
-            onclick="location.href = 'blogs/a-golden-investment-opportunity.html'"
-          >
-            <div class="img-wrapper">
-              <img src="images/blog/golden-investment-opportunity.jpg" />
-            </div>
-            <div class="card-content">
-              <a href="blogs/a-golden-investment-opportunity.html">
-                <h1>A Golden Investment Opportunity</h1>
-              </a>
-              <span>August 29, 2022</span>
-              <p>
-                After getting huge accomplishments in New Metro City Kharian and
-                Golf City Gwadar, BSM Developer is going to construct a new
-                project named “New Metro City Gujar khan”. The project offers
-                all the up-to-date facilities
-              </p>
-              <a
-                href="blogs/a-golden-investment-opportunity.html"
-                class="read-more"
                 >Read More</a
               >
             </div>
