--- a/products&services.html
+++ b/products&services.html
@@ -138,7 +138,7 @@
     <section class="services" style="background: #f2f2f2">
       <div class="container">
         <h1 class="section-heading" style="color: #161616">
-          <span>We are Prov</span>iding Solutions
+          <span>Providing</span> Solutions
         </h1>
         <p style="color: #898989">
           Standing close to our Customers, as we are ready to serve you with
@@ -146,9 +146,9 @@
         </p>
         <div class="card-wrapper">
           <div class="card" data-aos="zoom-in">
-            <div class="service-img">
+            <!-- <div class="service-img">
               <i class="fab fa-whatsapp"></i>
-            </div>
+            </div> -->
             <!-- <img src="images/asset-management.png" alt="" data-aos="ease-out" /> -->
             <h2>Asset Management</h2>
             <p>
@@ -158,9 +158,9 @@
             </p>
           </div>
           <div class="card" data-aos="zoom-in">
-            <div class="service-img">
+            <!-- <div class="service-img">
               <i class="fab fa-whatsapp"></i>
-            </div>
+            </div> -->
             <!-- <img
               src="images/merge-your-property.png"
               alt=""
@@ -174,9 +174,9 @@
             </p>
           </div>
           <div class="card" data-aos="zoom-in">
-            <div class="service-img">
+            <!-- <div class="service-img">
               <i class="fab fa-whatsapp"></i>
-            </div>
+            </div> -->
             <!-- <img src="images/expert-opinions.png" alt="" data-aos="ease-out" /> -->
             <h2>Monitoring Services</h2>
             <p>
