--- a/projects.html
+++ b/projects.html
@@ -53,29 +53,44 @@
           </li>
           <div class="sub-menu-wrap" id="subMenu">
             <div class="sub-menu">
+              <a
+                href="projects/rudn-enclave-islamabad.html"
+                class="sub-menu-link"
+              >
+                <p>Rudn Enclave</p>
+              </a>
+              <a
+                href="projects/silver-city-islamabad.html"
+                class="sub-menu-link"
+              >
+                <p>Silver City</p>
+              </a>
               <a href="#" class="sub-menu-link">
                 <p>Eighteen</p>
               </a>
-              <a href="#" class="sub-menu-link">
+              <a href="projects/new-metro-city.html" class="sub-menu-link">
                 <p>New Metro City Gujar Khan</p>
               </a>
-              <a href="#" class="sub-menu-link">
-                <p>Blue World City Sports Valley</p>
+              <a
+                href="projects/blue-world-sports-valley-islamabad.html"
+                class="sub-menu-link"
+              >
+                <p>Sports Valley</p>
               </a>
               <a href="#" class="sub-menu-link">
                 <p>Blue World Water Front District</p>
               </a>
-              <a href="#" class="sub-menu-link">
-                <p>Park View City Islamabad</p>
-              </a>
-              <a href="#" class="sub-menu-link">
+              <a
+                href="projects/kingdom-valley-islamabad.html"
+                class="sub-menu-link"
+              >
                 <p>Kingdom Valley</p>
               </a>
               <a href="#" class="sub-menu-link">
                 <p>Discovery Garden</p>
               </a>
               <a href="#" class="sub-menu-link">
-                <p>1947 Housing</p>
+                <p>Park View City Islamabad</p>
               </a>
             </div>
           </div>
