image add to section

--- a/home.html
+++ b/home.html
@@ -249,6 +249,7 @@
 
     <!-- Our Service Section -->
     <section class="services">
+      <div class="overlay"></div>
       <div class="container">
         <h1 class="section-heading"><span>Providing</span> Solutions</h1>
         <p>
@@ -506,6 +507,7 @@
     </section>
 
     <section class="contact">
+      <div class="overlay"></div>
       <div class="container">
         <h1 class="section-heading"><span>Contact</span> Us</h1>
         <p>Feel Free to Reach Out or Contact Us</p>
